# polish_art

./: .cursorrules  .env.example  .gitignore  DEPLOY_QUICK_START.md  README.md  analyze_methods.py  populate_test_db.py  pyproject.toml  pytest.ini  quick_share.ps1  requirements-scraper.txt  requirements.txt  run_e2e_tests.py  run_scrape.ps1  scrape_and_populate.py  setup_linux_box.ps1  trigger_linux_scrape.ps1
config/: cv_config.py  scraper_config.py
data/: reference_import_template.csv  scraper_targets.json
deployment/: DEPLOY_NOW.md  README_DEPLOYMENT.md  deploy.ps1  server_setup.sh  setup_ssh_key.ps1  setup_ssl.ps1  vps_setup.sh
docs/: AUTH_DESIGN.md  DEPLOY_CHECKLIST.md  Executive_Summary_Surveillance_System.md  IMAGE_STORAGE_IMPLEMENTATION.md  LAN_ACCESS_TROUBLESHOOTING.md  MISSING_IMAGE_ANALYSIS.md  Polish_Looted_Art_Discovery_Engine_Overview.pptx  Polish_Looted_Art_Discovery_Engine_Overview_new.pptx  Polish_Looted_Art_Discovery_Engine_Overview_new_20260208_025828.pptx  SCALING_ESTIMATE_ONE_YEAR.md  VISION_API_TRACKING.md  VPS_MINIMUM_CONFIG.md  architecture.md  deploy-pythonanywhere.md  deploy-vps.md  google_image_search_setup.md  phase2_step1_complete.md  pptx_llm_instructions.md
docs/slideshow/: README.md
examples/: google_search_example.py
scripts/: capture_network_requests.py  check_image_hash.py  dump_page.py  explore_site.py  extract_features.py  find_obid_pattern.py  import_looted_art.py  inspect_search_page.py  scrape_looted_art.py  scrape_lootedart_gov_pl.py  sync_to_vps.ps1
spec/: SPEC.md
src/: constants.py  main.py
src/api/: auth_routes.py  routes.py  schemas.py  scraper_status_auth.py
src/cv_pipeline/: __init__.py  clip_embedder.py  feature_extractor.py  (+2 more)
static/: app.js  detail.css  detail.html  detail.js  implementation_complete.html  index.html  status.html  styles.css  test_features.html
(+66 files in other folders)
